--- a/frontend/src/css/Login.css
+++ b/frontend/src/css/Login.css
@@ -58,6 +58,9 @@ input[type=password] {
     border-radius:10px;
 }
 
+.buttons-container {
+    margin-top: 40px;
+}
 
 .button-container {
     display: flex;
@@ -69,7 +72,6 @@ input[type=password] {
 }
 
 .login-button {
-    margin-top: 40px;
     border: none;
     padding: 5px;
     border-radius:10px;
