--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -3,9 +3,23 @@ body {
     color: rgba(202, 164, 164, 0.651);
 }
 
+a {
+    color: rgb(255, 255, 206)
+}
 
+a:visited {
+    color: rgb(196, 255, 255)
+}
+
+a:hover {
+    color: white
+}
+
+button {
+    border: none;
+    background-color: cadetblue
+}
 
 div {
-
-    margin-left: 5%;
+    margin-left: 3%;
 }
