--- a/frontend/src/css/Login.css
+++ b/frontend/src/css/Login.css
@@ -9,7 +9,7 @@
 
 .login-container {
     width: 25%;
-    background-color: white;
+    background-color: beige;
     border-radius: 10px;
     padding: 4%;
     margin: 4%;
