--- a/frontend/src/css/Navbar.css
+++ b/frontend/src/css/Navbar.css
@@ -30,7 +30,7 @@
 .link-container a {
     font-size: 16px;
     font-weight: bolder;
-    color: rgb(110, 62, 43);
+    color: black;
 }
 
 .link-container:hover a{
