--- a/frontend/src/css/NewRecipe.css
+++ b/frontend/src/css/NewRecipe.css
@@ -2,3 +2,8 @@
     padding-right: 150px;
     border-right: 2px solid black;
 }
+
+.recipe-title-container {
+    padding-right: 150px;
+    border-right: 2px solid black;
+}
